--- a/SolutionEquations/Web.config
+++ b/SolutionEquations/Web.config
@@ -7,7 +7,7 @@
 <configuration>
   <system.web>
     <compilation debug="true" targetFramework="4.7.1"/>
-    <httpRuntime targetFramework="4.7.1"/>
+    <httpRuntime targetFramework="4.7.1" requestPathInvalidCharacters="&lt;,&gt;,*,%,&amp;,:,\,?"/>
   </system.web>
   <system.codedom>
     <compilers>
